--- a/functions/package.json
+++ b/functions/package.json
@@ -3,6 +3,7 @@
     "node": "12"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "firebase-admin": "^9.4.2",
     "firebase-functions": "^3.13.1"
   }
